src/parser/snapshots/monkey_language_server__parser__test__array_unhappy_1.snap
---
source: src/parser/test.rs
description: "[1,2 3]; 5"
expression: result
---
[
    Array {
        token: Token(LBracket, "[", (0,0)->(0,1)),
        elems: Ok(
            [
                Ok(
                    Int {
                        token: Token(Int, "1", (0,1)->(0,2)),
                        value: 1,
                    },
                ),
                Ok(
                    Int {
                        token: Token(Int, "2", (0,3)->(0,4)),
                        value: 2,
                    },
                ),
                Err(
                    Err(ExpectedTokenNotFound("SyntaxError: Expected ',' not found."), (0,5)->(0,6)),
                ),
            ],
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 7,
            },
        },
    },
    Int {
        token: Token(Int, "5", (0,9)->(0,10)),
        value: 5,
    },
]

===================================

[1,2 3]; 5
     ^ [Error] SyntaxError: Expected ',' not found.
