src/parser/snapshots/monkey_language_server__parser__test__array_unhappy_3.snap
---
source: src/parser/test.rs
description: "[1,+]"
expression: result
---
[
    Array {
        token: Token(LBracket, "[", (0,0)->(0,1)),
        elems: Ok(
            [
                Ok(
                    Int {
                        token: Token(Int, "1", (0,1)->(0,2)),
                        value: 1,
                    },
                ),
                Err(
                    Err(UnexpectedToken("SyntaxError: Unexpected '+'."), (0,3)->(0,4)),
                ),
            ],
        ),
    },
]

===================================

[1,+]
   ^ SyntaxError: Unexpected '+'.
